--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,3 +37,22 @@ target_include_directories(
   ${DEPENDS_DIR}/libsnark/depends/libfqfft
   ${DEPENDS_DIR}/libsnark/depends/libff
 )
+
+add_executable(
+  test-knowledge-of-preimage
+
+  test-knowledge-of-preimage.cpp
+)
+target_link_libraries(
+  test-knowledge-of-preimage
+
+  snark
+)
+target_include_directories(
+  test-knowledge-of-preimage
+
+  PUBLIC
+  ${DEPENDS_DIR}/libsnark
+  ${DEPENDS_DIR}/libsnark/depends/libfqfft
+  ${DEPENDS_DIR}/libsnark/depends/libff
+)
